--- a/blindcontest/package.json
+++ b/blindcontest/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@socket.io/component-emitter": "^3.1.0",
+    "@supabase/supabase-js": "^2.38.4",
     "@types/react-router-native": "^6.4.0",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.5.0",
