--- a/blindcontest/package.json
+++ b/blindcontest/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "@socket.io/component-emitter": "^3.1.0",
     "@supabase/supabase-js": "^2.38.4",
-    "@types/react-router-native": "^6.4.0",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
@@ -21,9 +23,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-native": "0.72.5",
     "react-native-web": "~0.19.6",
-    "react-router-native": "^6.15.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
