--- a/blindcontest/package.json
+++ b/blindcontest/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@react-spring/native": "^9.7.3",
     "@socket.io/component-emitter": "^3.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "@types/socket.io-client": "^3.0.0",
