--- a/blindcontest/package.json
+++ b/blindcontest/package.json
@@ -9,13 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
-    "@hcaptcha/react-hcaptcha": "github:hcaptcha/react-hcaptcha",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.16",
-    "@react-spring/native": "^9.7.3",
     "@socket.io/component-emitter": "^3.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "@types/socket.io-client": "^3.0.0",
@@ -25,14 +23,18 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-google-recaptcha-v3": "^0.0.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-vector-icons": "^6.4.17",
     "typescript": "^5.1.3"
   },
   "private": true
