--- a/blindcontest/app.json
+++ b/blindcontest/app.json
@@ -22,7 +22,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#1a1a1a"
       },
-      "package": "com.salimmm.blindcontest"
+      "package": "com.raph00000.blindcontest"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -32,6 +32,6 @@
         "projectId": "9bc95f70-fda6-4908-9c55-3dbb663f0590"
       }
     },
-    "owner": "salimmm"
+    "owner": "raph00000"
   }
 }
