--- a/blindcontest/app.json
+++ b/blindcontest/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "blindcontest",
-    "slug": "blind-contest",
+    "slug": "blindcontest",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
